# raspberry_pi_todo_app

./: .gitignore  README.md  pyproject.toml
docs/: design.md
src/: agent.py  main.py
src/agents/task_manager/: agent.py
src/db/: __init__.py  client.py
src/models/: __init__.py  task.py
src/routers/: tasks.py
static/: style.css
templates/: base.html  index.html
